# handmade-hero-rs

./: .gitignore  Cargo.toml  README.md  build-application.ps1  build-plugin.ps1  precommit-check.ps1
handmade_hero/: Cargo.toml
handmade_hero/src/: lib.rs
handmade_hero_interface/: Cargo.toml
handmade_hero_interface/src/: application.rs  application_state.rs  audio_context.rs  button_state.rs  color.rs  controller_state.rs  coordinate_2d.rs  f32_color.rs  f32_pixel.rs  game_state.rs  initialize_context.rs  input_context.rs  input_state.rs  joystick_state.rs  lib.rs  mouse_state.rs  pixel.rs  player.rs  point_2d.rs  rectangle.rs  render_context.rs  sound_state.rs  stereo_sample.rs  tile_map.rs  tile_map_coordinate.rs  tile_map_key.rs  u8_color.rs  u8_pixel.rs  units.rs  world.rs  world_coordinate.rs
handmade_hero_plugin/: Cargo.toml
handmade_hero_plugin/src/: application_plugin.rs  lib.rs  rectangle.rs  tile_map.rs  world.rs
src/: application.rs  button_state.rs  controller_state.rs  direct_sound.rs  direct_sound_buffer.rs  direct_sound_buffer_lock.rs  input_state.rs  joystick_state.rs  joystick_transition.rs  main.rs  performance_counter.rs  pixel.rs  stereo_sample.rs  win32_application.rs
win32_handmade_hero/: Cargo.toml
win32_handmade_hero/src/: application.rs  application_error.rs  application_loader.rs  button_state.rs  direct_sound.rs  direct_sound_buffer.rs  direct_sound_buffer_lock_guard.rs  joystick_state.rs  main.rs  performance_counter.rs  playback_recorder.rs  stereo_sample.rs  win32_application.rs
