[workspace]
resolver = "3"
members = [
    "handmade_hero_interface",
    "handmade_hero_plugin",
    "win32_handmade_hero"
]

[workspace.dependencies]
thiserror = { version = "2.0.17" }

[workspace.lints.rust]
rust_2018_idioms = "warn"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
