[package]
name = "hero-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
windows = { version = "0.62.1", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_System_LibraryLoader", "Win32_UI_WindowsAndMessaging", "Win32_UI_Input_XboxController", "Win32_UI_Input", "Win32_System_Memory", "Win32_UI_Input_KeyboardAndMouse", "Win32_Media_Audio_DirectSound"] }
thiserror = { workspace = true }
libloading = { version = "0.8.9" }

[lints]
workspace = true