[package]
name = "hero-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
handmade_hero_interface = { path = "../handmade_hero_interface" }
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_System_LibraryLoader", "Win32_UI_WindowsAndMessaging", "Win32_UI_Input_XboxController", "Win32_UI_Input", "Win32_System_Memory", "Win32_UI_Input_KeyboardAndMouse", "Win32_Media_Audio_DirectSound"] }
libloading = { version = "0.9.0" }
bincode = { workspace = true }

[lints]
workspace = true